--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,10 +1,11 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>{{ site.titre }} | {{ page.titre }}</title>
+    <title>{{ siteTitle }} | {{ pageTitle }}</title>
 </head>
 <body>
-    {% include menu.html }
-    {{ content }}
+{{> menu }}
+
+{{ content }}
 </body>
 </html>
